Multiline descriptions for skills